Está el combate faltan pruebas

--- a/Files/Juego/Juego/Juego.csproj
+++ b/Files/Juego/Juego/Juego.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Enemigo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pruebas.cs" />
+    <Compile Include="Torres.cs" />
+    <Compile Include="Unit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
