--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ Files/Juego/Test/obj/Test.csproj.nuget.g.props
 Files/Juego/Test/obj/Test.csproj.nuget.g.targets
 
 
+Files/Juego/Test/obj/Debug/net6.0/Test.assets.cache
+Files/Juego/Test/obj/Test.csproj.nuget.g.targets
+Files/Juego/Test/obj/Test.csproj.nuget.g.props
+Files/Juego/Test/obj/Test.csproj.nuget.dgspec.json
+Files/Juego/Test/obj/project.nuget.cache
+Files/Juego/Test/obj/project.assets.json
+Files/Juego/Test/obj/Debug/net6.0/Test.csproj.AssemblyReference.cache
+Files/Juego/Test/obj/Debug/net6.0/Test.assets.cache
